src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>DPD_BNL_Indisponibilite_PO</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>0</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>En attente de traitement</fullName>
        </values>
        <values>
            <fullName>En attente de validation</fullName>
        </values>
        <values>
            <fullName>En cours de traitement</fullName>
        </values>
        <values>
            <fullName>Terminée</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>DPD_BNL_Indisponibilite_PO_old</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>0</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>9</fullName>
        </values>
        <values>
            <fullName>En attente de traitement</fullName>
        </values>
        <values>
            <fullName>En attente de validation</fullName>
        </values>
        <values>
            <fullName>En cours de traitement</fullName>
        </values>
        <values>
            <fullName>Terminée</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>DPD_BNL_Process_Demarrage_Activite</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>10</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>11</fullName>
        </values>
        <values>
            <fullName>Terminée</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>DPD_BNL_Requêtes_Anomalie</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>0</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>En attente de traitement</fullName>
        </values>
        <values>
            <fullName>En attente de validation</fullName>
        </values>
        <values>
            <fullName>En cours de traitement</fullName>
        </values>
        <values>
            <fullName>En cours échange matériel</fullName>
        </values>
        <values>
            <fullName>Terminée</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>DPD_BNL_Requêtes_Anomalie_old</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>0</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>9</fullName>
        </values>
        <values>
            <fullName>En attente de traitement</fullName>
        </values>
        <values>
            <fullName>En attente de validation</fullName>
        </values>
        <values>
            <fullName>En cours de traitement</fullName>
        </values>
        <values>
            <fullName>En cours échange matériel</fullName>
        </values>
        <values>
            <fullName>Terminée</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>DPD_BNL_Requêtes_Indisponibilite_PDA</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>0</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>En attente de traitement</fullName>
        </values>
        <values>
            <fullName>En attente de validation</fullName>
        </values>
        <values>
            <fullName>En cours de traitement</fullName>
        </values>
        <values>
            <fullName>En cours échange matériel</fullName>
        </values>
        <values>
            <fullName>Terminée</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>DPD_BNL_Requêtes_Indisponibilite_PDA_old</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>0</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>9</fullName>
        </values>
        <values>
            <fullName>En attente de traitement</fullName>
        </values>
        <values>
            <fullName>En attente de validation</fullName>
        </values>
        <values>
            <fullName>En cours de traitement</fullName>
        </values>
        <values>
            <fullName>En cours échange matériel</fullName>
        </values>
        <values>
            <fullName>Terminée</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>DPD_BNL_Requêtes_Injoignable_Indisponible</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>0</fullName>
        </values>
        <values>
            <fullName>En attente de traitement</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>En attente de validation</fullName>
        </values>
        <values>
            <fullName>En cours de traitement</fullName>
        </values>
        <values>
            <fullName>Terminée</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>DPD_BNL_Requêtes_Injoignable_Indisponible_old</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>0</fullName>
        </values>
        <values>
            <fullName>9</fullName>
        </values>
        <values>
            <fullName>En attente de traitement</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>En attente de validation</fullName>
        </values>
        <values>
            <fullName>En cours de traitement</fullName>
        </values>
        <values>
            <fullName>Terminée</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>DPD_BNL_Requêtes_Ponctuelles</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>0</fullName>
        </values>
        <values>
            <fullName>En attente de traitement</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>En attente de validation</fullName>
        </values>
        <values>
            <fullName>En cours de traitement</fullName>
        </values>
        <values>
            <fullName>En cours envoi matériel</fullName>
        </values>
        <values>
            <fullName>Terminée</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>DPD_CHE_Indisponibilite_PO</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>0</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>En attente de traitement</fullName>
        </values>
        <values>
            <fullName>En attente de validation</fullName>
        </values>
        <values>
            <fullName>En cours de traitement</fullName>
        </values>
        <values>
            <fullName>Terminée</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>DPD_CHE_Process_Demarrage_Activite</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>10</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>11</fullName>
        </values>
        <values>
            <fullName>Terminée</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>DPD_CHE_Requêtes_Anomalie</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>0</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>En attente de traitement</fullName>
        </values>
        <values>
            <fullName>En attente de validation</fullName>
        </values>
        <values>
            <fullName>En cours de traitement</fullName>
        </values>
        <values>
            <fullName>En cours échange matériel</fullName>
        </values>
        <values>
            <fullName>Terminée</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>DPD_CHE_Requêtes_Indisponibilite_PDA</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>0</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>En attente de traitement</fullName>
        </values>
        <values>
            <fullName>En attente de validation</fullName>
        </values>
        <values>
            <fullName>En cours de traitement</fullName>
        </values>
        <values>
            <fullName>En cours échange matériel</fullName>
        </values>
        <values>
            <fullName>Terminée</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>DPD_CHE_Requêtes_Injoignable_Indisponible</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>0</fullName>
        </values>
        <values>
            <fullName>En attente de traitement</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>En attente de validation</fullName>
        </values>
        <values>
            <fullName>En cours de traitement</fullName>
        </values>
        <values>
            <fullName>Terminée</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>DPD_CHE_Requêtes_Ponctuelles</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>0</fullName>
        </values>
        <values>
            <fullName>En attente de traitement</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>En attente de validation</fullName>
        </values>
        <values>
            <fullName>En cours de traitement</fullName>
        </values>
        <values>
            <fullName>En cours envoi matériel</fullName>
        </values>
        <values>
            <fullName>Terminée</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>DPD_CZE_Indisponibilité_PO</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>0</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>En attente de traitement</fullName>
        </values>
        <values>
            <fullName>En attente de validation</fullName>
        </values>
        <values>
            <fullName>En cours de traitement</fullName>
        </values>
        <values>
            <fullName>Terminée</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>DPD_CZE_Process_Demarrage_Activite</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>10</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>11</fullName>
        </values>
        <values>
            <fullName>Terminée</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>DPD_CZE_Requêtes_Anomalie</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>0</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>En attente de traitement</fullName>
        </values>
        <values>
            <fullName>En attente de validation</fullName>
        </values>
        <values>
            <fullName>En cours de traitement</fullName>
        </values>
        <values>
            <fullName>En cours échange matériel</fullName>
        </values>
        <values>
            <fullName>Terminée</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>DPD_CZE_Requêtes_Indisponibilite_PDA</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>0</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>En attente de traitement</fullName>
        </values>
        <values>
            <fullName>En attente de validation</fullName>
        </values>
        <values>
            <fullName>En cours de traitement</fullName>
        </values>
        <values>
            <fullName>En cours échange matériel</fullName>
        </values>
        <values>
            <fullName>Terminée</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>DPD_CZE_Requêtes_Injoignable_Indisponible</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>0</fullName>
        </values>
        <values>
            <fullName>En attente de traitement</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>En attente de validation</fullName>
        </values>
        <values>
            <fullName>En cours de traitement</fullName>
        </values>
        <values>
            <fullName>Terminée</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>DPD_CZE_Requêtes_Ponctuelles</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>0</fullName>
        </values>
        <values>
            <fullName>En attente de traitement</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>En attente de validation</fullName>
        </values>
        <values>
            <fullName>En cours de traitement</fullName>
        </values>
        <values>
            <fullName>En cours envoi matériel</fullName>
        </values>
        <values>
            <fullName>Terminée</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>DPD_HUN_Indisponibilite_PO</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>0</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>En attente de traitement</fullName>
        </values>
        <values>
            <fullName>En attente de validation</fullName>
        </values>
        <values>
            <fullName>En cours de traitement</fullName>
        </values>
        <values>
            <fullName>Terminée</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>DPD_HUN_Process_Demarrage_Activite</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>10</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>11</fullName>
        </values>
        <values>
            <fullName>Terminée</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>DPD_HUN_Requêtes_Anomalie</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>0</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>En attente de traitement</fullName>
        </values>
        <values>
            <fullName>En attente de validation</fullName>
        </values>
        <values>
            <fullName>En cours de traitement</fullName>
        </values>
        <values>
            <fullName>En cours échange matériel</fullName>
        </values>
        <values>
            <fullName>Terminée</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>DPD_HUN_Requêtes_Indisponibilite_PDA</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>0</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>En attente de traitement</fullName>
        </values>
        <values>
            <fullName>En attente de validation</fullName>
        </values>
        <values>
            <fullName>En cours de traitement</fullName>
        </values>
        <values>
            <fullName>En cours échange matériel</fullName>
        </values>
        <values>
            <fullName>Terminée</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>DPD_HUN_Requêtes_Injoignable_Indisponible</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>0</fullName>
        </values>
        <values>
            <fullName>En attente de traitement</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>En attente de validation</fullName>
        </values>
        <values>
            <fullName>En cours de traitement</fullName>
        </values>
        <values>
            <fullName>Terminée</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>DPD_HUN_Requêtes_Ponctuelles</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>0</fullName>
        </values>
        <values>
            <fullName>En attente de traitement</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>En attente de validation</fullName>
        </values>
        <values>
            <fullName>En cours de traitement</fullName>
        </values>
        <values>
            <fullName>En cours envoi matériel</fullName>
        </values>
        <values>
            <fullName>Terminée</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>FR_Anomalie_Synchro</fullName>
        <description>Ce processus de support est utilisé lorsqu&apos;une anomalie de synchronisation France est créée.</description>
        <isActive>true</isActive>
        <values>
            <fullName>0</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>10</fullName>
        </values>
        <values>
            <fullName>En attente de traitement</fullName>
        </values>
        <values>
            <fullName>En cours de traitement</fullName>
        </values>
        <values>
            <fullName>En cours échange matériel</fullName>
        </values>
        <values>
            <fullName>Terminée</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>FR_Injoignabilite</fullName>
        <description>Ce processus de support est utilisé lorsqu&apos;une requête France de type injoignable est créée.</description>
        <isActive>true</isActive>
        <values>
            <fullName>0</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>10</fullName>
        </values>
        <values>
            <fullName>En attente de traitement</fullName>
        </values>
        <values>
            <fullName>En cours de traitement</fullName>
        </values>
        <values>
            <fullName>Terminée</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>FR_requêtes_ponctuelles</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>0</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>En attente de traitement</fullName>
        </values>
        <values>
            <fullName>En cours de traitement</fullName>
        </values>
        <values>
            <fullName>Terminée</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>PUS_FR_Import_De_Liste</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>0</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>12</fullName>
        </values>
        <values>
            <fullName>13</fullName>
        </values>
        <values>
            <fullName>14</fullName>
        </values>
        <values>
            <fullName>En attente de traitement</fullName>
        </values>
        <values>
            <fullName>En cours de traitement</fullName>
        </values>
        <values>
            <fullName>Terminée</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>PUS_FR_Process_Demarrage_Activite</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>10</fullName>
        </values>
        <values>
            <fullName>11</fullName>
        </values>
        <values>
            <fullName>12</fullName>
        </values>
        <values>
            <fullName>13</fullName>
        </values>
        <values>
            <fullName>14</fullName>
        </values>
        <values>
            <fullName>5</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>8</fullName>
        </values>
        <values>
            <fullName>9</fullName>
        </values>
        <values>
            <fullName>Terminée</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>PUS_FR_Process_Gestion_Materiel</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>0</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>10</fullName>
        </values>
        <values>
            <fullName>En attente de traitement</fullName>
        </values>
        <values>
            <fullName>En cours de traitement</fullName>
        </values>
        <values>
            <fullName>En cours échange matériel</fullName>
        </values>
        <values>
            <fullName>Terminée</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>PUS_FR_Process_WebHelp</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>10</fullName>
        </values>
        <values>
            <fullName>En attente de traitement</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>En cours de traitement</fullName>
        </values>
        <values>
            <fullName>Terminée</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>TM_France</fullName>
        <description>Support process for Ticketing france</description>
        <isActive>true</isActive>
        <values>
            <fullName>0</fullName>
        </values>
        <values>
            <fullName>En attente de traitement</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>En cours de traitement</fullName>
        </values>
        <values>
            <fullName>Terminée</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>TM_Inter</fullName>
        <description>Processus de support Ticket Manager International</description>
        <isActive>true</isActive>
        <values>
            <fullName>0</fullName>
        </values>
        <values>
            <fullName>En attente de traitement</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>En attente de validation</fullName>
        </values>
        <values>
            <fullName>En cours de traitement</fullName>
        </values>
        <values>
            <fullName>Terminée</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>ACC_Retard_Traitement__c</fullName>
        <formula>IF( TEXT (Status)  = &quot;2&quot;  || TEXT (Status)  = &quot;3&quot; || TEXT (Status)  = &quot;4&quot;|| TEXT (Status)  = &quot;5&quot;|| TEXT (Status)  = &quot;6&quot;, IF( (7 &lt;= Age_de_la_requete__c  &amp;&amp; Age_de_la_requete__c &lt;= 14), &quot;Moins de 14 jours&quot; , &quot;Plus de 14 jours&quot;),
IF( TEXT (Status)  = &quot;1&quot;  || TEXT (Status)  = &quot;0&quot;,IF( (2 &lt;= Age_de_la_requete__c  &amp;&amp; Age_de_la_requete__c &lt;= 14), &quot;Moins de 14 jours&quot; ,&quot;Plus de 14 jours&quot;), &quot;Pas de retard&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ACC - Retard Traitement</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age_de_la_requete__c</fullName>
        <formula>FLOOR(NOW()-DATETIMEVALUE(CreatedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age de la requête (J)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Alert__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Alert</label>
        <referenceTo>Alert__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Alerte_date_de_fin__c</fullName>
        <formula>IF(AND(
    Indispo_Date_Fin__c&gt;today(), 
    ISPICKVAL(Status,&quot;Terminée&quot;)),
IMAGE(&quot;/resource/image_icone_warning&quot;, &quot;&quot;)&amp;&quot;                &quot;&amp;
$Label.Alerte_date_fin_indispo_pour_cloturer_requete, &quot; &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alerte date de fin</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amplitude_horaire__c</fullName>
        <formula>Account.Amplitude_horaire_du_relais__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amplitude horaire</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Anomalie__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Anomalie</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Anomalie__c.PUDO__c</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Anomalie__c</referenceTo>
        <relationshipLabel>Requêtes</relationshipLabel>
        <relationshipName>Requ_tes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Anomalie_de_synchro_ouverte__c</fullName>
        <formula>Account.Anomalie_de_synchro_ouverte__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Anomalie de synchro ouverte</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Autre_motif__c</fullName>
        <label>Autre motif</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Canal_du_contact__c</fullName>
        <label>Canal du contact</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Appel</fullName>
                    <default>true</default>
                    <label>Appel</label>
                </value>
                <value>
                    <fullName>Autre</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>Courrier</fullName>
                </value>
                <value>
                    <fullName>Device</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>PDA</fullName>
                </value>
                <value>
                    <fullName>Selfcare</fullName>
                </value>
                <value>
                    <fullName>Visite terrain</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cause_Devoye__c</fullName>
        <label>Cause Dévoyé</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cause relais</fullName>
                </value>
                <value>
                    <fullName>Cause transporteur</fullName>
                </value>
                <value>
                    <fullName>Cause mixte</fullName>
                </value>
                <value>
                    <fullName>Cause DDR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Code_postal__c</fullName>
        <formula>Account.ShippingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Code postal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commentaire__c</fullName>
        <label>Commentaire</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Conditions_AnoSynch__c</fullName>
        <formula>IF(AND(OR(RecordType.DeveloperName=&quot;DPD_BNL_Anomalie_Synchro&quot;,
                 RecordType.DeveloperName=&quot;DPD_HUN_Anomalie_Synchro&quot;),
             Indisponibilite_en_cours__c=&quot;0&quot;,
             Etat_Pudo__c&lt;&gt;&quot;7&quot;, 
             Etat_Pudo__c&lt;&gt;&quot;8&quot;, 
             Etat_Pudo__c&lt;&gt;&quot;9&quot;, 
             OR(ISBLANK(Date_de_rappel_planifiee__c), 
                                Date_de_rappel_planifiee__c&lt;=Today())
             
             
             
             
             
             ), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conditions AnoSynch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conditions_Indisponibilit__c</fullName>
        <formula>IF( AND

           (Injoignabilite_en_cours_TECH__c=false,
            Etat_Pudo__c&lt;&gt;&quot;7&quot;,
            Etat_Pudo__c&lt;&gt;&quot;8&quot;,
            Etat_Pudo__c&lt;&gt;&quot;9&quot;,

            OR(ISBLANK(Date_de_rappel_planifiee__c),
                 Date_de_rappel_planifiee__c&lt;=Today()),

           
            OR(
               AND(RecordType.DeveloperName=&quot;DPD_BNL_Indisponibilite&quot;,
                         Date_fin_Indispo_ChTech__c=true),
               AND(RecordType.DeveloperName=&quot;DPD_HUN_Indisponibilit&quot;,
                         Date_fin_Indispo_ChTech__c=true),
            
        RecordType.DeveloperName=&quot;DPD_BNL_Indisponibilit_PDA&quot;,
        RecordType.DeveloperName=&quot;DPD_HUN_Indisponibilit_PDA&quot;
        
        )),
           
            
            
         
                 
                 true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conditions Indisponibilité</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conditions_Injoignabilite__c</fullName>
        <formula>IF( AND(OR(RecordType.DeveloperName=&quot;DPD_BNL_Injoignable_Indisponible&quot;,
                   RecordType.DeveloperName=&quot;DPD_HUN_Injoignable_Indisponible&quot;),
             Injoignabilite_en_cours_TECH__c=true), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conditions Injoignabilité</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conges_en_cours__c</fullName>
        <formula>IF( ISBLANK( Account.Conges_en_cours__c ),&quot;0&quot;,&quot;1&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Congés en cours</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_operationnel__c</fullName>
        <formula>Account.Contact_operationnel_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact opérationnel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_appel_1__c</fullName>
        <label>Date appel 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_appel_2__c</fullName>
        <label>Date appel 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_appel_3__c</fullName>
        <label>Date appel 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_appel_Bilan_1__c</fullName>
        <label>Date appel Bilan 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_appel_Bilan_2__c</fullName>
        <label>Date appel Bilan 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_changem_vers_Prolongation__c</fullName>
        <label>Date changement vers Prolongation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_d_installation__c</fullName>
        <formula>Account.Date_d_installation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date d&apos;installation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_de_fin_d_activit__c</fullName>
        <formula>Account.Date_de_fin_d_activite__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date de fin d&apos;activité</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_de_modification__c</fullName>
        <label>Date de modification</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_de_passage_tat_2__c</fullName>
        <formula>Account.Date_de_passage_etat2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date de passage état 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_de_rappel_planifiee__c</fullName>
        <label>Date de rappel planifiée</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_de_validation_du_relais__c</fullName>
        <formula>Account.Date_de_passage_etat2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date de validation du relais</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_fin_Indispo_ChTech__c</fullName>
        <formula>IF(  

OR(
        AND( ISPICKVAL(Sous_type_indisponibilit__c, &quot;Sinistre / Travaux / Santé&quot;),
             Indispo_Date_Debut__c  &lt;  TODAY(),
             ISBLANK(Indispo_Date_Fin__c)
             ),

         AND(ISPICKVAL(Sous_type_indisponibilit__c, &quot;Sinistre / Travaux / Santé&quot;),
             NOT(ISBLANK(Indispo_Date_Fin__c)),
              Indispo_Date_Fin__c &lt;= TODAY()+3
             ),
             
             ISPICKVAL(Sous_type_indisponibilit__c, &quot;Qualité de service&quot;)),
             

        true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date fin Indispo ChTech</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>